change to text footer

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- code a footer -->
     <div class="footer-description text-center">
       <h1 class="text-center logo">SFT</h1>
-      <h3>This website was created with love. Enjoy your workout and stay fit together!</h3>
+      <h3>This website was created with love. Enjoy your workout and stay fit!</h3>
       <h3>Stay in touch:</h3>
     </div>
   </div>
